wk_taa_taaqa/src/objects/account_owner_mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>DisplayOrder__c</fullName>
        <description>To store order of owner assignment</description>
        <label>AssignmentOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <description>To store owner account&apos;s field names</description>
        <label>OwnerField</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoleField__c</fullName>
        <label>RoleField</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Account Owner Fields Mapping</label>
</CustomObject>